# learn-gemm

./: .clang-format  CMakeLists.txt  main.cu
src/: bench_gemm.cu  bench_transpose.cu  gemm_fp16.cu  gemm_fp16_gemini.cu  gemm_fp16_grok.cu  gemm_fp32.cu  main.cu  matrix.h  transpose_fp32.cu
